--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: CUHacking 2018
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
   Ottawa's largets hackathon, CUHacking!
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "CUHacking.github.io" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
